@@ -1,17 +1,16 @@
+
 package manipalcse.pdc.services;
 
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import manipalcse.pdc.dto.LoginResponse;
 import manipalcse.pdc.entity.Admin;
 import manipalcse.pdc.entity.Alumni;
 import manipalcse.pdc.entity.Faculty;
-import manipalcse.pdc.entity.Privilege;
-import manipalcse.pdc.entity.Role;
 import manipalcse.pdc.entity.Student;
 import manipalcse.pdc.repository.AdminRepo;
 import manipalcse.pdc.repository.AlumniRepo;
@@ -19,60 +18,73 @@ import manipalcse.pdc.repository.FacultyRepo;
 import manipalcse.pdc.repository.StudentRepo;
 import manipalcse.pdc.security.JwtUtil;
 
+
 @Service
 public class LoginService {
-    
+
     @Autowired
     private AdminRepo adminRepo;
-    @Autowired
-    private StudentRepo studentRepo;
-    @Autowired
-    private FacultyRepo facultyRepo;
+
     @Autowired
     private AlumniRepo alumniRepo;
+
+    @Autowired
+    private FacultyRepo facultyRepo;
+
+    @Autowired
+    private StudentRepo studentRepo;
+
     @Autowired
     private JwtUtil jwtUtil;
-    @Autowired
-    private PasswordEncoder passwordEncoder;
 
- public LoginResponse login(String email, String password) {
-    try {
-        // Try Admin
+    public LoginResponse login(String email, String password) {
         Admin admin = adminRepo.findByEmail(email).orElse(null);
-        if (admin != null && passwordEncoder.matches(password, admin.getPassword())) {
-            return buildResponse(admin.getEmail(), "ADMIN", admin.getRoles());
-        }
-        // Try Student
-        Student student = studentRepo.findByEmail(email).orElse(null);
-        if (student != null && passwordEncoder.matches(password, student.getPassword())) {
-            return buildResponse(student.getEmail(), "STUDENT", student.getRoles());
-        }
-        // Try Faculty
-        Faculty faculty = facultyRepo.findByEmail(email).orElse(null);
-        if (faculty != null && passwordEncoder.matches(password, faculty.getPassword())) {
-            return buildResponse(faculty.getEmail(), "FACULTY", faculty.getRoles());
-        }
-        // Try Alumni
         Alumni alumni = alumniRepo.findByEmail(email).orElse(null);
-        if (alumni != null && passwordEncoder.matches(password, alumni.getPassword())) {
-            return buildResponse(alumni.getEmail(), "ALUMNI", alumni.getRoles());
-        }
-        throw new RuntimeException("Invalid email or password");
-    } catch (Exception e) {
-        throw new RuntimeException("Login failed: " + e.getMessage());
-    }
-}
+        Faculty faculty = facultyRepo.findByEmail(email).orElse(null);
+        Student student = studentRepo.findByEmail(email).orElse(null);
 
-    private LoginResponse buildResponse(String email, String role, List<Role> roles) {
-        LoginResponse response = new LoginResponse();
-        response.setEmail(email);
-        response.setRole(role);
-        response.setPrivileges(roles.stream()
-            .flatMap(r -> r.getPrivileges().stream())
-            .map(Privilege::getName)
-            .distinct()
-            .toList());
-        response.setToken(jwtUtil.generateJwtToken(email, List.of(role)));
-        return response;
+        if (admin != null) {
+            if (!passwordEncoder.matches(password, admin.getPassword())) {
+                throw new RuntimeException("Invalid password");
+            }
+
+            String Id = admin.getId();
+            List<String> roles = Collections.singletonList("ADMIN");
+            String jwtToken = jwtUtil.generateJwtToken(Id, roles);
+
+            return new LoginResponse(jwtToken, Id, roles);
+        } else if (alumni != null) {
+            if (!passwordEncoder.matches(password, alumni.getPassword())) {
+                throw new RuntimeException("Invalid password");
+            }
+
+            String Id = alumni.getId();
+            List<String> roles = Collections.singletonList("ALUMNI");
+            String jwtToken = jwtUtil.generateJwtToken(Id, roles);
+
+            return new LoginResponse(jwtToken, Id, roles);
+        } else if (faculty != null) {
+            if (!passwordEncoder.matches(password, faculty.getPassword())) {
+                throw new RuntimeException("Invalid password");
+            }
+
+            String Id = faculty.getId();
+            List<String> roles = Collections.singletonList("FACULTY");
+            String jwtToken = jwtUtil.generateJwtToken(Id, roles);
+
+            return new LoginResponse(jwtToken, Id, roles);
+        } else if (student != null) {
+            if (!passwordEncoder.matches(password, student.getPassword())) {
+                throw new RuntimeException("Invalid password");
+            }
+
+            String Id = student.getId();
+            List<String> roles = Collections.singletonList("STUDENT");
+            String jwtToken = jwtUtil.generateJwtToken(Id, roles);
+
+            return new LoginResponse(jwtToken, Id, roles);
+        } else {
+            throw new RuntimeException("User not found");
+        }
     }
 }
